--- a/_page/_modules/index.html
+++ b/_page/_modules/index.html
@@ -46,7 +46,8 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="plottool.html">plottool</a></li>
-<ul><li><a href="plottool/abstract_interaction.html">plottool.abstract_interaction</a></li>
+<ul><li><a href="plottool/__MPL_INIT__.html">plottool.__MPL_INIT__</a></li>
+<li><a href="plottool/abstract_interaction.html">plottool.abstract_interaction</a></li>
 <li><a href="plottool/color_funcs.html">plottool.color_funcs</a></li>
 <li><a href="plottool/custom_constants.html">plottool.custom_constants</a></li>
 <li><a href="plottool/custom_figure.html">plottool.custom_figure</a></li>
